--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
---- layout: default title: 我的Blog2 ---
+---
+layout: default title: 我的Blog2
+---
 　　<h2>{{ page.title }}</h2>
 　　<p>最新文章</p>
 　　<ul>
